# lidar_curb_detection

./: CMakeLists.txt  README.md  test.sh
common/: ReadYamlFile.cpp  ReadYamlFile.h  Viewer.cpp  Viewer.h  location_fusion_struct.h  messageDeal.cpp  messageDeal.h  readconfigfile.cpp  readconfigfile.h  threadsafe_list.h  threadsafe_queue.h
config/: debug_config.yaml  param.cfg  ulog.cfg
config/佛山T1上的雷达配置文件/: lidar.cfg
config/佛山T1上的雷达配置文件/lsCH64w_front/: lidar.cfg
config/佛山T1上的雷达配置文件/rsHelios_32_back/: lidar.cfg
config/佛山T1上的雷达配置文件/rsHelios_32_front/: lidar.cfg
config/小车11上的雷达配置文件/: lidar.cfg
include/: BaseDrive.cpp  BaseDrive.h  ConnectTools.cpp  ConnectTools.h  CurveFitting.cpp  CurveFitting.h  Dbscan.h  LeiShenDrive.cpp  LeiShenDrive.h  LidarCurbDectection.cpp  LidarCurbDectection.h  SuTengDrive.cpp  SuTengDrive.h  Type.h  kalman.cpp  kalman.h
ls_driver/Include/: GetLidarData.cpp  GetLidarData.h  GetLidarData_C16_v3_0.cpp  GetLidarData_C16_v3_0.h  GetLidarData_C16_v4_0.cpp  GetLidarData_C16_v4_0.h  GetLidarData_C1_v4_0.cpp  GetLidarData_C1_v4_0.h  GetLidarData_C32_70D_v4_0.cpp  GetLidarData_C32_70D_v4_0.h  GetLidarData_C32_90D_v4_0.cpp  GetLidarData_C32_90D_v4_0.h  GetLidarData_C32_v3_0.cpp  GetLidarData_C32_v3_0.h  GetLidarData_C32_v4_0.cpp  GetLidarData_C32_v4_0.h  GetLidarData_C8_v4_0.cpp  GetLidarData_C8_v4_0.h  GetLidarData_CH128S1.cpp  GetLidarData_CH128S1.h  GetLidarData_CH128x1.cpp  GetLidarData_CH128x1.h  GetLidarData_CH16x1.cpp  GetLidarData_CH16x1.h  GetLidarData_CH32.cpp  GetLidarData_CH32.h  GetLidarData_CH32_WideAngle.cpp  GetLidarData_CH32_WideAngle.h  GetLidarData_CH64.cpp  GetLidarData_CH64.h  GetLidarData_CH64w.cpp  GetLidarData_CH64w.h  GetLidarData_LS128.cpp  GetLidarData_LS128.h  GetLidarData_M10.cpp  GetLidarData_M10.h
src/: main.cpp
小车11上的雷达配置文件/lsCH64w_front/: lidar.cfg
小车11上的雷达配置文件/vj16p_top/: lidar.cfg
